scripts/nullaway/original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8.txt
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:34: error: [NullAway] @NonNull field mission not initialized
	private Mission mission;
	                ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:35: error: [NullAway] @NonNull field tickerThread not initialized
	private Thread tickerThread;
	               ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Station.java:12: error: [NullAway] initializer method does not guarantee @NonNull field app (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Station(int clientId ) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields server (line 14), socket (line 15), out (line 16), din (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TelnetClientServer( int clientId ) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:77: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:82: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:92: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:115: error: [NullAway] assigning @Nullable expression to @NonNull field
		out = null;
		    ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/campaign/Mission.java:10: error: [NullAway] @NonNull field capitalShip not initialized
	private Ship capitalShip;
	             ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Ship.java:83: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return shipParts.get(name);
		^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Crew.java:5: error: [NullAway] @NonNull field crewMembers not initialized
	CrewMember[] crewMembers;
	             ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Crew.java:6: error: [NullAway] @NonNull field numberOne not initialized
	CrewMember numberOne;
	           ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Crew.java:7: error: [NullAway] @NonNull field captain not initialized
	CrewMember captain;
	           ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/CrewMember.java:6: error: [NullAway] @NonNull field name not initialized
	String name;
	       ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/CrewMember.java:7: error: [NullAway] @NonNull field rank not initialized
	Rank rank;
	     ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/campaign/Rank.java:5: error: [NullAway] @NonNull field name not initialized
	String name;
	       ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/HTTPStatusTicker.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields server (line 38), socket (line 39), out (line 40) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public HTTPStatusTicker(Open688Server openSubServer) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/campaign/Docks.java:13: error: [NullAway] initializer method does not guarantee @NonNull field dockedShips (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Docks(Vec3 coordinates, TargetType type, int capacity ) {
	       ^
    (see http://t.uber.com/nullaway )
18 errors
